--- a/index.html
+++ b/index.html
@@ -186,12 +186,10 @@
             }
         }
 
-        /* ファイル入力のデフォルト表示を非表示にする */
         input[type="file"] {
             display: none;
         }
 
-        /* 広告用のスイルを追加 */
         .ad-container {
             width: 100%;
             max-width: 800px;
@@ -220,7 +218,6 @@
             }
         }
 
-        /* タッチデバイス用の調整 */
         @media (hover: none) {
             .file-drop-area {
                 border: 2px solid #ccc;
@@ -241,7 +238,6 @@
             }
         }
 
-        /* スマートフォン向けの調整 */
         @media (max-width: 480px) {
             body {
                 padding: 5px;
@@ -272,18 +268,6 @@
             }
         }
 
-        /* タブレット向けの調整 */
-        @media (min-width: 481px) and (max-width: 768px) {
-            .file-drop-area {
-                width: 90%;
-                padding: 25px 15px;
-            }
-
-            button {
-                width: 80%;
-            }
-        }
-
         .message {
             position: fixed;
             bottom: 20px;
@@ -305,13 +289,27 @@
             to { opacity: 1; transform: translate(-50%, 0); }
         }
 
-        /* モバイルデバイス用の調整 */
-        @media (max-width: 480px) {
-            .message {
-                bottom: 40px;
-                font-size: 13px;
-                padding: 10px 16px;
-            }
+        /* プログレスバー */
+        .progress-container {
+            width: 90%;
+            max-width: 600px;
+            background: #eee;
+            border-radius: 25px;
+            margin: 20px auto;
+            display: none;
+            overflow: hidden;
+        }
+
+        .progress-bar {
+            height: 20px;
+            background: var(--primary-color);
+            width: 0%;
+            transition: width 0.3s ease;
+        }
+
+        .progress-text {
+            margin: 10px 0;
+            font-weight: 500;
         }
     </style>
 </head>
@@ -319,15 +317,7 @@
     <div class="container">
         <!-- 上部広告枠 -->
         <div class="ad-container top" id="ad-top">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="YOUR-CLIENT-ID"
-                 data-ad-slot="YOUR-AD-SLOT"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <!-- 広告タグを挿入 -->
         </div>
 
         <h1>A1 PDF → A3分割PDF(6枚)生成ツール</h1>
@@ -342,26 +332,23 @@
             <div class="file-name" id="file-name"></div>
             <button type="submit">分割してダウンロード</button>
         </form>
+
         <p class="error" id="error-msg" style="display: none;"></p>
         <p class="loading" id="loading-msg" style="display: none;">処理中です。しばらくお待ちください</p>
 
+        <div class="progress-container" id="progress-container">
+            <div class="progress-bar" id="progress-bar"></div>
+        </div>
+        <p class="progress-text" id="progress-text" style="display: none;"></p>
+
         <!-- 下部広告枠 -->
         <div class="ad-container bottom" id="ad-bottom">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="YOUR-CLIENT-ID"
-                 data-ad-slot="YOUR-AD-SLOT"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
+            <!-- 広告タグを挿入 -->
         </div>
     </div>
+
     <!-- pdf-lib CDN -->
     <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=YOUR-CLIENT-ID"
-     crossorigin="anonymous"></script>
     <script>
         const { PDFDocument } = PDFLib;
 
@@ -371,6 +358,9 @@
         const form = document.getElementById('upload-form');
         const errorMsg = document.getElementById('error-msg');
         const loadingMsg = document.getElementById('loading-msg');
+        const progressContainer = document.getElementById('progress-container');
+        const progressBar = document.getElementById('progress-bar');
+        const progressText = document.getElementById('progress-text');
 
         let originalFileName = '';
 
@@ -425,24 +415,28 @@
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
             showError('');
+            loadingMsg.style.display = 'block';
+            progressContainer.style.display = 'none';
+            progressText.style.display = 'none';
 
             const files = fileInput.files;
             if (!files || files.length === 0) {
-                showError('ファイルが選択されていまん');
+                showError('ファイルが選択されていません');
+                loadingMsg.style.display = 'none';
                 return;
             }
 
-            loadingMsg.style.display = 'block';
             try {
                 const file = files[0];
                 const arrayBuffer = await file.arrayBuffer();
                 const resultPdfBytes = await splitAndMergePdf(arrayBuffer);
-
+                
                 // 元ファイル名から拡張子を分離
                 const baseName = originalFileName.replace(/\.[^/.]+$/, "");
                 const downloadName = `split_${baseName}.pdf`;
                 
-                downloadFile(resultPdfBytes, downloadName);
+                await downloadFile(resultPdfBytes, downloadName);
+                progressText.textContent = '完了しました！';
             } catch (err) {
                 console.error(err);
                 showError('エラーが発生しました: ' + err.message);
@@ -455,17 +449,22 @@
             const origPdf = await PDFDocument.load(inputArrayBuffer);
             const newPdf = await PDFDocument.create();
 
-            // A1サイズを72dpi換算
+            // A1サイズ(ミリ)を72dpi換算
             const a1_width = (841 / 25.4) * 72;
             const a1_height = (594 / 25.4) * 72;
 
             const num_splits_x = 3;
             const num_splits_y = 2;
+            const totalSplits = num_splits_x * num_splits_y; // 6
             const a1_width_split = a1_width / num_splits_x;
             const a1_height_split = a1_height / num_splits_y;
 
             // オーバーラップ
             const overlap = 47;
+
+            progressContainer.style.display = 'block';
+            progressText.style.display = 'block';
+            updateProgress(0, totalSplits);
 
             for (let i = 0; i < num_splits_y; i++) {
                 for (let j = 0; j < num_splits_x; j++) {
@@ -481,6 +480,10 @@
                     const height = y_end - y_start;
 
                     newPage.setMediaBox(x_start, y_start, width, height);
+
+                    // 進行状況更新
+                    const doneCount = i * num_splits_x + j + 1;
+                    updateProgress(doneCount, totalSplits);
                 }
             }
 
@@ -488,23 +491,24 @@
             return pdfBytes;
         }
 
-        function downloadFile(bytes, filename) {
+        function updateProgress(done, total) {
+            const percent = Math.round((done / total) * 100);
+            progressBar.style.width = percent + '%';
+            progressText.textContent = `処理中...(${done}/${total})`;
+        }
+
+        async function downloadFile(bytes, filename) {
             const blob = new Blob([bytes], { type: 'application/pdf' });
             const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 
             if (isMobile) {
-                // PDFデータをBase64エンコード
-                const reader = new FileReader();
-                reader.onload = function(e) {
-                    const base64data = e.target.result.split(',')[1];
-                    // ダウンロードページにリダイレクト
-                    const params = new URLSearchParams({
-                        pdf: base64data,
-                        filename: filename
-                    });
-                    window.location.href = `download.html?${params.toString()}`;
-                };
-                reader.readAsDataURL(blob);
+                // PDFをBase64エンコードしてdownload.htmlへ
+                const base64data = await blobToBase64(blob);
+                const params = new URLSearchParams({
+                    pdf: base64data,
+                    filename: filename
+                });
+                window.location.href = `download.html?${params.toString()}`;
             } else {
                 // デスクトップの場合は直接ダウンロード
                 const url = URL.createObjectURL(blob);
@@ -516,6 +520,18 @@
                 document.body.removeChild(link);
                 URL.revokeObjectURL(url);
             }
+        }
+
+        function blobToBase64(blob) {
+            return new Promise((resolve, reject) => {
+                const reader = new FileReader();
+                reader.onloadend = () => {
+                    const base64data = reader.result.split(',')[1];
+                    resolve(base64data);
+                };
+                reader.onerror = reject;
+                reader.readAsDataURL(blob);
+            });
         }
 
         function showMessage(message) {
