--- a/index.html
+++ b/index.html
@@ -456,35 +456,72 @@
         function downloadFile(bytes, filename) {
             const blob = new Blob([bytes], { type: 'application/pdf' });
             const url = URL.createObjectURL(blob);
-
-            // モバイルデバイスかどうかを確認
             const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 
             if (isMobile) {
-                // モバイル用の処理
-                const reader = new FileReader();
-                reader.onload = function(e) {
+                if (/iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+                    // iOS用の処理
+                    const successMsg = document.createElement('div');
+                    successMsg.style.position = 'fixed';
+                    successMsg.style.top = '50%';
+                    successMsg.style.left = '50%';
+                    successMsg.style.transform = 'translate(-50%, -50%)';
+                    successMsg.style.backgroundColor = 'rgba(255, 255, 255, 0.95)';
+                    successMsg.style.padding = '20px';
+                    successMsg.style.borderRadius = '12px';
+                    successMsg.style.boxShadow = '0 4px 12px rgba(0, 0, 0, 0.15)';
+                    successMsg.style.zIndex = '1000';
+                    successMsg.style.maxWidth = '90%';
+                    successMsg.style.textAlign = 'center';
+
+                    successMsg.innerHTML = `
+                        <p style="margin-bottom: 15px;">PDFが生成されました</p>
+                        <p style="margin-bottom: 15px;">以下の手順で保存してください：</p>
+                        <ol style="text-align: left; margin-bottom: 15px;">
+                            <li style="margin-bottom: 8px;">右上の「共有」ボタン（□と上向き矢印のアイコン）をタップ</li>
+                            <li style="margin-bottom: 8px;">「ファイルに保存」を選択</li>
+                            <li>保存先を選択して「保存」をタップ</li>
+                        </ol>
+                        <button id="openPdfBtn" style="
+                            background: var(--primary-color);
+                            color: white;
+                            padding: 10px 20px;
+                            border: none;
+                            border-radius: 8px;
+                            font-weight: 500;
+                            margin-bottom: 10px;
+                        ">PDFを開く</button>
+                        <button id="closeMsg" style="
+                            background: #e5e7eb;
+                            color: #374151;
+                            padding: 10px 20px;
+                            border: none;
+                            border-radius: 8px;
+                            font-weight: 500;
+                        ">閉じる</button>
+                    `;
+
+                    document.body.appendChild(successMsg);
+
+                    document.getElementById('openPdfBtn').onclick = function() {
+                        window.open(url, '_blank');
+                    };
+
+                    document.getElementById('closeMsg').onclick = function() {
+                        successMsg.remove();
+                    };
+
+                } else {
+                    // Android用の処理（既存のまま）
                     const link = document.createElement('a');
                     link.href = url;
                     link.download = filename;
-                    link.target = '_blank';
-                    
-                    // iOSの場合
-                    if (/iPhone|iPad|iPod/i.test(navigator.userAgent)) {
-                        link.target = '_blank';
-                        link.rel = 'noopener';
-                        // 新しいタブでPDFを開く
-                        window.open(url, '_blank');
-                    } else {
-                        // Androidの場合
-                        document.body.appendChild(link);
-                        link.click();
-                        document.body.removeChild(link);
-                    }
-                };
-                reader.readAsDataURL(blob);
+                    document.body.appendChild(link);
+                    link.click();
+                    document.body.removeChild(link);
+                }
             } else {
-                // デスクトップ用の処理
+                // デスクトップ用の処理（既存のまま）
                 const link = document.createElement('a');
                 link.href = url;
                 link.download = filename;
@@ -493,7 +530,6 @@
                 document.body.removeChild(link);
             }
 
-            // URLを解放
             setTimeout(() => {
                 URL.revokeObjectURL(url);
             }, 1000);
@@ -501,3 +537,4 @@
     </script>
 </body>
 </html>
+
