--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            text-align: center;
         }
 
         h1 {
@@ -285,6 +286,26 @@
                 transform: none;
             }
         }
+
+        .note {
+            font-size: 0.8rem;
+            color: #64748b;
+            margin: -1rem 0 1rem 0;
+        }
+
+        @media (max-width: 600px) {
+            .note {
+                font-size: 0.7rem;
+                margin: -0.5rem 0 0.8rem 0;
+            }
+        }
+
+        #upload-form {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     </style>
 
     <!-- Google Fonts -->
@@ -297,7 +318,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>A1 PDF → A3分割PDF(6枚)生成ツール</h1>
+        <h1>A1 PDF → A3分割PDF(6枚)</h1>
+        <p class="note">※ iOSの場合、必ずSafariブラウザーで開いてください</p>
         
         <form id="upload-form">
             <div class="file-drop-area" id="file-drop-area">
