--- a/index.html
+++ b/index.html
@@ -283,8 +283,7 @@
                     </p>
                 </div>
                 <div class="overlap-preview-image">
-                    <img src="settings/イメージ.jpeg" alt="オーバーラップ設定のプレビュー" style="width: 80%; height: 80%; object-fit: 
-                    contain; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+                    <img src="settings/イメージ.jpeg" alt="オーバーラップ設定のプレビュー">
                 </div>
             </a>
         </div>
