--- a/index.html
+++ b/index.html
@@ -283,7 +283,8 @@
                     </p>
                 </div>
                 <div class="overlap-preview-image">
-                    <img src="settings/イメージ.jpeg" alt="オーバーラップ設定のプレビュー">
+                    <img src="settings/overlap.jpeg" alt="オーバーラップ設定のプレビュー" style="width: 80%; height: 80%; object-fit: 
+                    contain; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                 </div>
             </a>
         </div>
