--- a/index.html
+++ b/index.html
@@ -150,62 +150,44 @@
 
         @media (max-width: 600px) {
             body {
-                padding: 10px;
+                padding: 0;
             }
 
             .container {
-                padding: 1rem;
-                margin: 10px;
-            }
-
-            h1 {
-                font-size: 1.5rem;
-                margin-bottom: 1.5rem;
+                padding: 0.5rem;
+                margin: 0;
+                border-radius: 0;
+                min-height: 100vh;
             }
 
             .tool-list {
                 grid-template-columns: 1fr;
-                gap: 1rem;
-                padding: 0.5rem;
+                gap: 0.5rem;
+                padding: 0.25rem;
             }
 
             .tool-item {
-                padding: 1.2rem;
-            }
-
-            .tool-item h2 {
-                font-size: 1.2rem;
-                margin: 0.3rem 0;
-            }
-
-            .tool-item p {
-                font-size: 0.85rem;
-                margin: 0.3rem 0;
-            }
-
-            .tool-item:hover {
-                transform: translateY(-2px);
-            }
-
-            .tool-item:last-child {
-                grid-column: auto;
-                max-width: none;
+                padding: 1rem;
+                border-radius: 10px;
             }
 
             .tool-item.overlap-settings {
-                grid-template-columns: 1fr;
-                text-align: center;
-                padding: 1.5rem;
+                padding: 1rem;
+                margin-top: 0.5rem;
             }
 
             .overlap-settings-text {
                 text-align: center;
             }
 
+            .overlap-settings-text p {
+                margin-bottom: 0.5rem;
+            }
+
             .overlap-preview-image {
                 width: 160px;
                 height: 160px;
-                margin: 1rem auto;
+                margin: 0.5rem auto;
             }
         }
 
